--- a/.github/workflows/flink-cdc-tests.yml
+++ b/.github/workflows/flink-cdc-tests.yml
@@ -51,6 +51,6 @@ jobs:
           . .github/workflows/utils.sh
           jvm_timezone=$(random_timezone)
           echo "JVM timezone is set to $jvm_timezone"
-          mvn -T 1C -B clean install -pl 'org.apache.paimon:paimon-flink-cdc' -Duser.timezone=$jvm_timezone
+          mvn -T 1C -B clean install -pl 'org.apache.paimon:paimon-flink-cdc' -Duser.timezone=$jvm_timezone -Dtest=org.apache.paimon.flink.action.cdc.kafka.KafkaCanalSyncDatabaseActionITCase.testAuditTime
         env:
           MAVEN_OPTS: -Xmx4096m
