--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -95,8 +95,8 @@ paths:
     post:
       tags:
         - database
-      summary: Create Databases
-      operationId: createDatabases
+      summary: Create Database
+      operationId: createDatabase
       parameters:
         - name: prefix
           in: path
@@ -1137,6 +1137,139 @@ paths:
           $ref: '#/components/responses/ViewAlreadyExistErrorResponse'
         "500":
           $ref: '#/components/responses/ServerErrorResponse'
+  /v1/{prefix}/databases/{database}/functions:
+    get:
+      tags:
+        - function
+      summary: List functions
+      operationId: listFunctions
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: maxResults
+          in: query
+          schema:
+            type: integer
+            format: int32
+        - name: pageToken
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListFunctionsResponse'
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "404":
+          $ref: '#/components/responses/DatabaseNotExistErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+    post:
+      tags:
+        - function
+      summary: Create Function
+      operationId: createFunction
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Success, no content
+        "400":
+          $ref: '#/components/responses/BadRequestErrorResponse'
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "409":
+          $ref: '#/components/responses/FunctionAlreadyExistErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+
+  /v1/{prefix}/databases/{database}/functions/{function}:
+    get:
+      tags:
+        - function
+      summary: Get function
+      operationId: getFunction
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: function
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetFunctionResponse'
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "404":
+          $ref: '#/components/responses/DatabaseNotExistErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+    delete:
+      tags:
+        - view
+      summary: Drop function
+      operationId: dropFunction
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: function
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Success, no content
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "404":
+          $ref: '#/components/responses/FunctionNotExistErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+
 components:
   #############################
   # Reusable Response Objects #
@@ -1247,6 +1380,20 @@ components:
               "resourceName": "view",
               "code": 404
             }
+    FunctionNotExistErrorResponse:
+      description:
+        Not Found - FunctionNotExistException, the function does not exist
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/responses/ResourceNotExistErrorResponse'
+          example:
+            {
+              "message": "The given function does not exist",
+              "resourceType": "FUNCTION",
+              "resourceName": "function",
+              "code": 404
+            }
     ResourceAlreadyExistErrorResponse:
       description:
         Used for 409 errors.
@@ -1310,6 +1457,19 @@ components:
               "message": "The given view already exists",
               "resourceType": "VIEW",
               "resourceName": "view",
+              "code": 409
+            }
+    FunctionAlreadyExistErrorResponse:
+      description: Conflict - The view already exists
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/responses/ResourceAlreadyExistErrorResponse'
+          example:
+            {
+              "message": "The given function already exists",
+              "resourceType": "FUNCTION",
+              "resourceName": "function",
               "code": 409
             }
     ServerErrorResponse:
@@ -2071,6 +2231,57 @@ components:
             $ref: '#/components/schemas/GetViewResponse'
         nextPageToken:
           type: string
+    ListFunctionsResponse:
+      type: object
+      properties:
+        functions:
+          type: array
+          items:
+            type: string
+        nextPageToken:
+          type: string
+    GetFunctionResponse:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        schema:
+          $ref: '#/components/schemas/FunctionSchema'
+        owner:
+          type: string
+        createdAt:
+          format: int64
+        createdBy:
+          type: string
+        updatedAt:
+          format: int64
+        updatedBy:
+          type: string
+    FunctionSchema:
+      type: object
+      properties:
+        inputParams:
+          type: array
+          items:
+            $ref: '#/components/schemas/DataField'
+        returnParams:
+          type: array
+          items:
+            $ref: '#/components/schemas/DataField'
+        deterministic:
+          type: boolean
+        dialects:
+          type: object
+          additionalProperties:
+            type: string
+        comment:
+          type: string
+        options:
+          type: object
+          additionalProperties:
+            type: string
     ViewSchema:
       type: object
       properties:
