--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -95,8 +95,8 @@ paths:
     post:
       tags:
         - database
-      summary: Create Databases
-      operationId: createDatabases
+      summary: Create Database
+      operationId: createDatabase
       parameters:
         - name: prefix
           in: path
@@ -1184,6 +1184,152 @@ paths:
           $ref: '#/components/responses/ViewAlreadyExistErrorResponse'
         "500":
           $ref: '#/components/responses/ServerErrorResponse'
+  /v1/{prefix}/functions:
+    get:
+      tags:
+        - function
+      summary: List functions
+      operationId: listFunctions
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: maxResults
+          in: query
+          schema:
+            type: integer
+            format: int32
+        - name: pageToken
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListFunctionsResponse'
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+    post:
+      tags:
+        - function
+      summary: Create Function
+      operationId: createFunction
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateFunctionRequest'
+      responses:
+        "200":
+          description: Success, no content
+        "400":
+          $ref: '#/components/responses/BadRequestErrorResponse'
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "409":
+          $ref: '#/components/responses/FunctionAlreadyExistErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+
+  /v1/{prefix}/functions/{function}:
+    get:
+      tags:
+        - function
+      summary: Get function
+      operationId: getFunction
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: function
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetFunctionResponse'
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "404":
+          $ref: '#/components/responses/DatabaseNotExistErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+    post:
+      tags:
+        - function
+      summary: Alter function
+      operationId: alterFunction
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: function
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AlterFunctionRequest'
+      responses:
+        "200":
+          description: Success, no content
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "404":
+          $ref: '#/components/responses/FunctionNotExistErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+    delete:
+      tags:
+        - function
+      summary: Drop function
+      operationId: dropFunction
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: function
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Success, no content
+        "401":
+          $ref: '#/components/responses/UnauthorizedErrorResponse'
+        "404":
+          $ref: '#/components/responses/FunctionNotExistErrorResponse'
+        "500":
+          $ref: '#/components/responses/ServerErrorResponse'
+
 components:
   #############################
   # Reusable Response Objects #
@@ -1305,6 +1451,20 @@ components:
               "resourceName": "view",
               "code": 404
             }
+    FunctionNotExistErrorResponse:
+      description:
+        Not Found - FunctionNotExistException, the function does not exist
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/responses/ResourceNotExistErrorResponse'
+          example:
+            {
+              "message": "The given function does not exist",
+              "resourceType": "FUNCTION",
+              "resourceName": "function",
+              "code": 404
+            }
     ResourceAlreadyExistErrorResponse:
       description:
         Used for 409 errors.
@@ -1368,6 +1528,19 @@ components:
               "message": "The given view already exists",
               "resourceType": "VIEW",
               "resourceName": "view",
+              "code": 409
+            }
+    FunctionAlreadyExistErrorResponse:
+      description: Conflict - The view already exists
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/responses/ResourceAlreadyExistErrorResponse'
+          example:
+            {
+              "message": "The given function already exists",
+              "resourceType": "FUNCTION",
+              "resourceName": "function",
               "code": 409
             }
     ServerErrorResponse:
@@ -1464,6 +1637,179 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ViewChange'
+    CreateFunctionRequest:
+      type: object
+      properties:
+        name:
+          type: string
+        inputParams:
+          type: array
+          items:
+            $ref: '#/components/schemas/DataField'
+        returnParams:
+          type: array
+          items:
+            $ref: '#/components/schemas/DataField'
+        deterministic:
+          type: boolean
+        definitions:
+          type: object
+          additionalProperties:
+            $ref: "#/components/schemas/FunctionDefinition"
+        comment:
+          type: string
+        options:
+          type: object
+          additionalProperties:
+            type: string
+    AlterFunctionRequest:
+      type: object
+      properties:
+        changes:
+          type: array
+          items:
+            $ref: '#/components/schemas/FunctionChange'
+    FunctionChange:
+      anyOf:
+        - $ref: '#/components/schemas/SetFunctionOption'
+        - $ref: '#/components/schemas/RemoveFunctionOption'
+        - $ref: '#/components/schemas/UpdateFunctionComment'
+        - $ref: '#/components/schemas/AddDefinition'
+        - $ref: '#/components/schemas/UpdateDefinition'
+        - $ref: '#/components/schemas/DropDefinition'
+    BaseFunctionChange:
+      discriminator:
+        propertyName: action
+        mapping:
+          setOption: '#/components/schemas/SetFunctionOption'
+          removeOption: '#/components/schemas/RemoveFunctionOption'
+          updateComment: '#/components/schemas/UpdateFunctionComment'
+          addDefinition: '#/components/schemas/AddDefinition'
+          updateDefinition: '#/components/schemas/UpdateDefinition'
+          dropDefinition: '#/components/schemas/DropDefinition'
+      type: object
+      required:
+        - action
+      properties:
+        action:
+          type: string
+    SetFunctionOption:
+      allOf:
+        - $ref: '#/components/schemas/BaseFunctionChange'
+      properties:
+        action:
+          type: string
+          const: "setOption"
+        key:
+          type: string
+        value:
+          type: string
+    RemoveFunctionOption:
+      allOf:
+        - $ref: '#/components/schemas/BaseFunctionChange'
+      properties:
+        action:
+          type: string
+          const: "removeOption"
+        key:
+          type: string
+    UpdateFunctionComment:
+      allOf:
+        - $ref: '#/components/schemas/BaseFunctionChange'
+      properties:
+        action:
+          type: string
+          const: "updateComment"
+        comment:
+          type: string
+    AddDefinition:
+      allOf:
+        - $ref: '#/components/schemas/BaseFunctionChange'
+      properties:
+        action:
+          type: string
+          const: "addDefinition"
+        name:
+          type: string
+        definition:
+          $ref: "#/components/schemas/FunctionDefinition"
+    UpdateDefinition:
+      allOf:
+        - $ref: '#/components/schemas/BaseFunctionChange'
+      properties:
+        action:
+          type: string
+          const: "updateDefinition"
+        name:
+          type: string
+        definition:
+          $ref: "#/components/schemas/FunctionDefinition"
+    DropDefinition:
+      allOf:
+        - $ref: '#/components/schemas/BaseFunctionChange'
+      properties:
+        action:
+          type: string
+          const: "dropDefinition"
+        name:
+          type: string
+    FunctionDefinition:
+      anyOf:
+        - $ref: '#/components/schemas/FileFunctionDefinition'
+        - $ref: '#/components/schemas/SQLFunctionDefinition'
+        - $ref: '#/components/schemas/LambdaFunctionDefinition'
+    BaseFunctionDefinition:
+      discriminator:
+        propertyName: type
+        mapping:
+          file: '#/components/schemas/FileFunctionDefinition'
+          sql: '#/components/schemas/SQLFunctionDefinition'
+          lambda: '#/components/schemas/LambdaFunctionDefinition'
+      type: object
+      required:
+        - type
+      properties:
+        type:
+          type: string
+    SQLFunctionDefinition:
+      allOf:
+        - $ref: '#/components/schemas/BaseFunctionDefinition'
+      properties:
+        type:
+          type: string
+          const: "sql"
+        definition:
+          type: string
+    FileFunctionDefinition:
+      allOf:
+        - $ref: '#/components/schemas/BaseFunctionDefinition'
+      properties:
+        type:
+          type: string
+          const: "file"
+        fileType:
+          type: string
+        storagePaths:
+          type: array
+          items:
+            type: string
+        language:
+          type: string
+        className:
+          type: string
+        functionName:
+          type: string
+    LambdaFunctionDefinition:
+      allOf:
+        - $ref: '#/components/schemas/BaseFunctionDefinition'
+      properties:
+        type:
+          type: string
+          const: "lambda"
+        definition:
+          type: string
+        language:
+          type: string
     ViewChange:
       anyOf:
         - $ref: '#/components/schemas/SetViewOption'
@@ -1859,13 +2205,13 @@ components:
       required:
         - type
       properties:
-        'type':
+        type:
           type: string
     SnapshotInstant:
       allOf:
         - $ref: '#/components/schemas/BaseInstant'
       properties:
-        'type':
+        type:
           type: string
           const: "snapshot"
         snapshotId:
@@ -1875,7 +2221,7 @@ components:
       allOf:
         - $ref: '#/components/schemas/BaseInstant'
       properties:
-        'type':
+        type:
           type: string
           const: "tag"
         tagName:
@@ -2138,6 +2484,52 @@ components:
           items:
             $ref: '#/components/schemas/GetViewResponse'
         nextPageToken:
+          type: string
+    ListFunctionsResponse:
+      type: object
+      properties:
+        functions:
+          type: array
+          items:
+            type: string
+        nextPageToken:
+          type: string
+    GetFunctionResponse:
+      type: object
+      properties:
+        uuid:
+          type: string
+        name:
+          type: string
+        inputParams:
+          type: array
+          items:
+            $ref: '#/components/schemas/DataField'
+        returnParams:
+          type: array
+          items:
+            $ref: '#/components/schemas/DataField'
+        deterministic:
+          type: boolean
+        definitions:
+          type: object
+          additionalProperties:
+            $ref: "#/components/schemas/FunctionDefinition"
+        comment:
+          type: string
+        options:
+          type: object
+          additionalProperties:
+            type: string
+        owner:
+          type: string
+        createdAt:
+          format: int64
+        createdBy:
+          type: string
+        updatedAt:
+          format: int64
+        updatedBy:
           type: string
     ViewSchema:
       type: object
